# Kachok_site

./: docker-compose.yml
backend/: .env.example  profile.json  pyproject.toml
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py
backend/app/crud/: __init__.py  achievements.py  activity.py  category.py  leader.py  local_result.py  records.py  stats.py  user.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  category.py  global_result.py  local_result.py  user.py
backend/app/routers/: __init__.py  achievements.py  activity.py  admin.py  auth.py  leaders.py  profile.py  public.py  records.py  results.py  stats.py
backend/app/schemas/: __init__.py  achievements.py  activity.py  auth.py  category.py  leader.py  records.py  result.py  stats.py  token.py  user.py
backend/app/utils/: email.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 272f4db3855e_add_result_tables.py  6c6714f81d9a_create_initial_tables.py  ae492f1636c9_add_category_slug_and_user_profile_.py  b68ad0f5b11a_add_result_tables.py  fc8d7fbde95a_add_email_verification.py
frontend/css/: auth.css  base.css  index.css  loading.css  profile.css  section.css
frontend/html/: confirm-email.html  index.html  loading.html  login-admin.html  login.html  profile-dost.html  profile-history.html  profile-settings.html  profile-support.html  profile.html  register.html
frontend/js/: api.js  auth.js  layout.js  loading.js  profile-common.js  profile-settings.js  profile.js
frontend/partials/: futer.css  futer.html  (+5 more)
(+26 files in other folders)
